# RegTraka

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
Frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
Frontend/src/: main.tsx
Frontend/src/api/: index.ts  types.ts
Frontend/src/api/hooks/: index.ts
Frontend/src/components/base/: Input.tsx  Modal.tsx
Frontend/src/components/inc/: AttendanceChart.tsx  StudentListTable.tsx  StudentYearTable.tsx
Frontend/src/data/: index.ts
Frontend/src/pages/: home.tsx  index.ts  login.tsx  register.tsx  signup.tsx
Frontend/src/pages/admin/: attendance.tsx  dashboard.tsx  index.ts  instructor.tsx  root.tsx
Frontend/src/pages/admin/students/: detail.tsx  index.tsx
Frontend/src/pages/instructor/: dashboard.tsx  index.ts  root.tsx
Frontend/src/pages/instructor/students/: detail.tsx  index.tsx
Frontend/src/store/: index.ts
Frontend/src/store/slices/: user.ts
RegTraka/: settings.py  urls.py
RegTraka Backend/: .gitignore  README.md  pyproject.toml  requirements.txt
RegTraka Backend/RegTraka/: asgi.py  settings.py  urls.py  wsgi.py
RegTraka Backend/Users/: models.py  permissions.py  serializers.py  urls.py  views.py
RegTraka Backend/administrator/: serializers.py  urls.py  views.py
RegTraka Backend/instructor/: serializers.py  urls.py  views.py
Users/: models.py  serializers.py  urls.py  views.py
administrator/: serializers.py  urls.py  views.py
instructor/: serializers.py  urls.py  views.py
